Background tracing: Add config option to control whether or not to stop reactive tracing when a repeated trigger occurs

R=simonhatch@chromium.org
BUG=637129

Review-Url: https://codereview.chromium.org/2247033005
Cr-Commit-Position: refs/heads/master@{#412577}

Former-commit-id: fba230c24383ae08ea6d924401bdff81b46c7108